--- a/api/package.json
+++ b/api/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-   "start": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.3",
     "nodemon": "^2.0.22"
   }
 }
